--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> hello </h1> <br>
-< p style="font-family: Lucida Console;">
+<p style="font-family: "Lucida Console";">
   this is my website </p>
