--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<h1> hello </h1> <br>
-<p style="font-family: "Lucida Console";">
-  this is my website </p>
+<!DOCTYPE html>
+<html>
+  <head> 
+    <title>wwwebsite</title>
+  </head>
+  <body>
+    <h1>hello</h1>
+    <p> this is a website now </p>
+  </body>
+</html>
