--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>wwwebsite</title>
   </head>
   <body>
+    <style> hover {
+    background-color: yellow;
+}
+</style>
     <h1>hello</h1>
     <p> this is a website now </p>
   </body>
