--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head> 
     <title>wwwebsite</title>
+    <style> h1:hover {
+       background-color: yellow;
+    }
+</style>
   </head>
   <body>
-    <style> hover {
-    background-color: yellow;
-}
-</style>
+ 
     <h1>hello</h1>
     <p> this is a website now </p>
   </body>
