--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head> 
     <title>wwwebsite</title>
+    		<link rel="stylesheet" type="text/css" href="/css/main.css">
     <style> h1:hover {
        background-color: yellow;
     }
