--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>wwwebsite</title>
     		<link rel="stylesheet" type="text/css" href="/css/main.css">
     <style> h1:hover {
-       background-color: yellow;
+       background-color: black;
     }
 </style>
   </head>
@@ -12,5 +12,9 @@
  
     <h1>hello</h1>
     <p> this is a website now </p>
+    <p> by me </p>
+       <p class="wwwolke">
+           wwwolke 
+        </p>
   </body>
 </html>
