--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
  
     <h1>hello</h1>
-    <p> this is a website now </p>
+    <p> this is a website now. </p>
     <p> by me </p>
        <p class="wwwolke">
            wwwolke 
