--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>hello</h1>
     <p> this is a website now. </p>
     <p> by me </p>
-       <p class="wwwolke">
+       <p class=".wwwolke">
            wwwolke 
         </p>
   </body>
