--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head> 
     <title>wwwebsite</title>
-    		<link rel="stylesheet" type="text/css" href="/css/main.css">
+    		<link rel="stylesheet" type="text/css" href="css/main.css">
 
   </head>
   <body>
