--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <h1>hello</h1>
     <p> this is a website now. </p>
     <p> by me </p>
-    <h2>
-           wwwolke 
-        </h2>
+    <h2>wwwolke </h2>
   </body>
 </html>
