--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head> 
-    <title>wwwebsite</title>
-    		<link rel="stylesheet" type="text/css" href="css/main.css">
+    <head>
+        <title>wohin</title>
+         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <link rel="stylesheet" type="text/css" href="arrow.css" />
+    </head>
+    <body>
+        <a id="arrow" onclick="onClick()"></a>
+        <script src="arrowRotator.js"></script>
 
-  </head>
-  <body>
- 
-    <h1>hello</h1>
-    <p> this is a website now. </p>
-    <p> by me </p>
-    <p class="wolke">wwwolke </p>
-  </body>
+    </body>
 </html>
