--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" type="text/css" href="arrow.css" />
     </head>
     <body>
-        <a id="arrow" onclick="onClick()"></a>
-        <script src="arrowRotator.js"></script>
+	 <echo>wohin?</echo>
+	 <a id="arrow" onclick="onClick()"></a>
+     <script src="arrowRotator.js"></script>
 
     </body>
+
 </html>
