--- a/arrow.html
+++ b/arrow.html
@@ -3,11 +3,11 @@
     <head>
         <title>wohin</title>
          <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css" href="indexcss.css" />
+        <link rel="stylesheet" type="text/css" href="arrow.css" />
     </head>
     <body>
-     <a href="arrow.html" color=#FFFFFF>wohin?</a>
-
+	 <a id="arrow" onclick="onClick()"></a>
+     <script src="arrowRotator.js"></script>
 
     </body>
 
